[gd_scene load_steps=3 format=3 uid="uid://28c800auf8c2"]

[ext_resource type="Script" path="res://script/Menu.gd" id="1_myjeg"]
[ext_resource type="PackedScene" uid="uid://dfya3lwq3t610" path="res://Menu/seting.tscn" id="2_20wgl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myjeg")

[node name="seting2" parent="." instance=ExtResource("2_20wgl")]
visible = false

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 136.0
offset_right = 720.0
offset_bottom = 206.0
text = "Грати"

[node name="exti" type="Button" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 290.0
offset_right = 723.0
offset_bottom = 360.0
text = "Вийти"

[node name="seting" type="Button" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 211.0
offset_right = 722.0
offset_bottom = 281.0
text = "Налуштування"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="exti" to="." method="_on_exti_pressed"]
[connection signal="pressed" from="seting" to="." method="_on_seting_pressed"]
